# waveforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: showcase.py
src/waveforge/: __init__.py  fft.py  filters.py  signals.py  wav.py
tests/: test_fft.py  test_filters.py  test_signals_wav.py
